removing demo, renaming entities, vote api
