# src/dto/APIUserComment.ts
@@ -1,4 +1,0 @@
-export interface ApiUserComment {
-   name: string;
-   message: string;
-}
