# src/dto/Vote.ts
@@ -1,0 +1,8 @@
+export interface Vote {
+   voter: string;
+   proposalId: string;
+   support: number;
+   weight: string;
+   weightFloat: number;
+   reason: string;
+}
